# cmk_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  calc.cpp  linux-toolchain.cmake  main.cpp
base/: CMakeLists.txt  base.cpp  base.h
